--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,3 +10,6 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+#mouse exec enabled
+set-option -g mouse on
