--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,3 +13,7 @@ bind l select-pane -R
 
 #mouse exec enabled
 set-option -g mouse on
+
+#support 256colors
+
+set -g default-terminal screen-256color
