tmux.conf modified(status-line)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,7 +5,6 @@ setw -g mode-keys vi
 
 #vim keybind pain change..
 
-
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -17,3 +16,21 @@ set-option -g mouse on
 #support 256colors
 
 set -g default-terminal screen-256color
+
+#status-line color modified
+setw -g status-style fg=colour255,bg=colour00
+
+#status-left undisplayed
+set -g status-left ""
+
+#statu-line top position
+set -g status-position top
+
+#status-left format
+set-option -g status-left "#[bg=colour10,fg=colourd0]Session: #S #[default]"
+
+#window-status justify center
+set-option -g status-justify "centre"
+
+#window-status prefix pushed color modified
+setw -g window-status-current-format '#[bg=colour10,fg=colour0]#{?client_prefix,#[bg=colour226],} #I #W '
