--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,23 +14,31 @@ bind l select-pane -R
 set-option -g mouse on
 
 #support 256colors
-
 set -g default-terminal screen-256color
 
 #status-line color modified
 setw -g status-style fg=colour255,bg=colour00
 
-#status-left undisplayed
-set -g status-left ""
+#status-line top position
+set -g status-position bottom
 
-#statu-line top position
-set -g status-position top
+#status-left maxlengh modified
+set-option -g status-left-length 50
 
 #status-left format
-set-option -g status-left "#[bg=colour10,fg=colourd0]Session: #S #[default]"
+set-option -g status-left "#[bg=colour27,fg=colour232,bold]  Session: #S #[default]"
+
+#status-right format modified
+set-option -g status-right "#[fg=white][ \"#H\"  %Y-%m-%d %H:%M:%S ]"
+
+#status-right maxlength modified
+set-option -g status-right-length 60
 
 #window-status justify center
 set-option -g status-justify "centre"
 
+#window-status current window format
+setw  -g window-status-current-format "#[bg=colour27,fg=colour255,bold] #I: #W #[default]"
+
 #window-status prefix pushed color modified
-setw -g window-status-current-format '#[bg=colour10,fg=colour0]#{?client_prefix,#[bg=colour226],} #I #W '
+setw -g window-status-current-format '#[bg=colour27,fg=colour255,bold]#{?client_prefix,#[bg=colour202],} #I #W '
