powerline-shell _update_ps1 corrected in bashrc

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,10 +17,10 @@ set-option -g mouse on
 set -g default-terminal screen-256color
 
 #status-line color modified
-setw -g status-style fg=colour255,bg=colour00
+setw -g status-style fg=colour255,bg=colour232
 
 #status-line top position
-set -g status-position bottom
+set -g status-position top
 
 #status-left maxlengh modified
 set-option -g status-left-length 50
