--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,4 @@
 #tmux config
-
 setw -g mode-keys vi
 
 
@@ -9,6 +8,19 @@ bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
+
+#current pane size modify
+
+bind-key -r Left resize-pane -L 5
+bind-key -r Down resize-pane -D 5
+bind-key -r Up resize-pane -U 5 
+bind-key -r Right resize-pane -R 5
+
+#not selected pane background_color '#444444'
+set-option -g window-style 'bg=#444444'
+
+#selected pane background_color active 
+set-option -g window-active-style 'bg=#222222'
 
 #mouse exec enabled
 set-option -g mouse on
