pane active background_color modified

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,11 +16,11 @@ bind-key -r Down resize-pane -D 5
 bind-key -r Up resize-pane -U 5 
 bind-key -r Right resize-pane -R 5
 
-#not selected pane background_color '#444444'
-set-option -g window-style 'bg=#444444'
+#pane background_color
+set-option -g window-style 'bg=#282a36'
 
-#selected pane background_color active 
-set-option -g window-active-style 'bg=#222222'
+#unactive pane background_color
+set-option -g window-active-style 'bg=colour234'
 
 #mouse exec enabled
 set-option -g mouse on
@@ -54,3 +54,5 @@ setw  -g window-status-current-format "#[bg=colour27,fg=colour255,bold] #I: #W #
 
 #window-status prefix pushed color modified
 setw -g window-status-current-format '#[bg=colour27,fg=colour255,bold]#{?client_prefix,#[bg=colour202],} #I #W '
+
+setw -g window-status-current-style "fg=white"
