--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
 [user]
   name = git-nasu
   email = nasu301130@icloud.com
-  
+
 [alias]
   a = add -A
   last = log -1 HEAD #only last commit
@@ -14,7 +14,9 @@
   br = branch
   line = log --oneline #one line log state
   b = blame
-  
+	parent = log --parents --abbrev-commit
+	lol = log --graph --decorate --pretty=oneline --all --abbrev-commit
+
 [core]
   editor = vim
   quotepath = false #moji bake
