--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,40 +13,19 @@ bind l select-pane -R
 
 bind-key -r Left resize-pane -L 5
 bind-key -r Down resize-pane -D 5
-bind-key -r Up resize-pane -U 5 
+bind-key -r Up resize-pane -U 5
 bind-key -r Right resize-pane -R 5
 
 #mouse exec enabled
 set-option -g mouse on
 
-#support 256colors
-set -g default-terminal screen-256color
+# tmux-power
+set -g @tmux_power_theme 'moon'
 
-#status-line color modified
-setw -g status-style fg=colour255,bg=colour232
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'wfxr/tmux-poer'
 
-#status-line top position
-set -g status-position top
-
-#status-left maxlengh modified
-set-option -g status-left-length 50
-
-#status-left format
-set-option -g status-left "#[bg=colour27,fg=colour232,bold]  Session: #S #[default]"
-
-#status-right format modified
-set-option -g status-right "#[fg=white][ \"#H\"  %Y-%m-%d %H:%M:%S ]"
-
-#status-right maxlength modified
-set-option -g status-right-length 60
-
-#window-status justify center
-set-option -g status-justify "centre"
-
-#window-status current window format
-setw  -g window-status-current-format "#[bg=colour27,fg=colour255,bold] #I: #W #[default]"
-
-#window-status prefix pushed color modified
-setw -g window-status-current-format '#[bg=colour27,fg=colour255,bold]#{?client_prefix,#[bg=colour202],} #I #W '
-
-setw -g window-status-current-style "fg=white"
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
