added tmux plugins tpm tmux-power and others

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,13 +19,16 @@ bind-key -r Right resize-pane -R 5
 #mouse exec enabled
 set-option -g mouse on
 
+#status line position
+set -g status-position top
+
 # tmux-power
 set -g @tmux_power_theme 'moon'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'wfxr/tmux-poer'
+set -g @plugin 'wfxr/tmux-power'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
