--- a/.tmux.conf
+++ b/.tmux.conf
@@ -22,6 +22,7 @@ set-option -g mouse on
 #status line position
 set -g status-position top
 
+
 # tmux-power
 set -g @tmux_power_theme 'moon'
 
@@ -30,5 +31,15 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'wfxr/tmux-power'
 
+#plugins install prefix <Shift i>
+#plugins uninstall prefix <Option u>
+#plugins update prefix <Shift U>
+
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+#added default setting in tmux plugins
+
+set -g status-left-length 150
+set -g status-left-style default
+set -ag status-left " #[fg=green]Session: #S #[fg=yellow]Window #I #[fg=cyan]Pane: #P  #{prefix_highlight}"
