.bashrc,.tmux.conf modified

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,11 +20,11 @@ bind-key -r Right resize-pane -R 5
 set-option -g mouse on
 
 #status line position
-set -g status-position top
+set -g status-position bottom
 
 
 # tmux-power
-set -g @tmux_power_theme 'moon'
+set -g @tmux_power_theme 'gold'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
