--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,7 +24,7 @@ set -g status-position bottom
 
 
 # tmux-power
-set -g @tmux_power_theme 'gold'
+set -g @tmux_power_theme 'everforest'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
