--- a/.tmux.conf
+++ b/.tmux.conf
@@ -24,12 +24,36 @@ set -g status-position bottom
 
 
 # tmux-power
-set -g @tmux_power_theme 'everforest'
+# set -g @tmux_power_theme 'everforest'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'wfxr/tmux-power'
+# set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'catppuccin/tmux'
+
+# catppuccin config 3
+set -g @catppuccin_window_left_separator " "
+set -g @catppuccin_window_right_separator " "
+set -g @catppuccin_window_middle_separator " █"
+set -g @catppuccin_window_number_position "right"
+
+set -g @catppuccin_window_default_fill "number"
+set -g @catppuccin_window_default_text "#W"
+
+set -g @catppuccin_window_current_fill "number"
+set -g @catppuccin_window_current_text "#W"
+
+set -g @catppuccin_status_modules_right "date_time session directory user host"
+set -g @catppuccin_status_left_separator  " "
+set -g @catppuccin_status_right_separator " "
+set -g @catppuccin_status_right_separator_inverse "no"
+set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_status_connect_separator "no"
+set -g @catppuccin_date_time_text "%Y/%m/%d %H:%M"
+
+set -g @catppuccin_directory_text "#{pane_current_path}"
+
+# set -g @plugin 'wfxr/tmux-power'
 
 #plugins install prefix <Shift i>
 #plugins uninstall prefix <Option u>
@@ -40,6 +64,6 @@ run '~/.tmux/plugins/tpm/tpm'
 
 #added default setting in tmux plugins
 
-set -g status-left-length 150
-set -g status-left-style default
-set -ag status-left " #[fg=green]Session: #S #[fg=yellow]Window #I #[fg=cyan]Pane: #P  #{prefix_highlight}"
+set -g status-right-length 150
+# set -g status-left-style default
+set -g status-left  "#[fg=green]Session: #S #[fg=yellow]Window #I #[fg=cyan]Pane: #P  #{prefix_highlight}"
