--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,7 +20,7 @@ bind-key -r Right resize-pane -R 5
 set-option -g mouse on
 
 #status line position
-set -g status-position bottom
+set -g status-position top
 
 
 # tmux-power
@@ -28,7 +28,7 @@ set -g status-position bottom
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
-# set -g @plugin 'tmux-plugins/tmux-sensible'
+set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux'
 
 # catppuccin config 3
@@ -47,7 +47,8 @@ set -g @catppuccin_status_modules_right "date_time session directory user host"
 set -g @catppuccin_status_left_separator  " "
 set -g @catppuccin_status_right_separator " "
 set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
+#set -g @catppuccin_status_fill "icon"
+set -g @catppuccin_user_icon "󰏒"
 set -g @catppuccin_status_connect_separator "no"
 set -g @catppuccin_date_time_text "%Y/%m/%d %H:%M"
 
