--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,6 @@
+
 #tmux config
 setw -g mode-keys vi
-
 
 #vim keybind pain change..
 
@@ -9,62 +9,55 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-#current pane size modify
 
-bind-key -r Left resize-pane -L 5
-bind-key -r Down resize-pane -D 5
-bind-key -r Up resize-pane -U 5
-bind-key -r Right resize-pane -R 5
+set-option -g status-position top
 
-#mouse exec enabled
-set-option -g mouse on
-
-#status line position
-set -g status-position top
-
-
-# tmux-power
-# set -g @tmux_power_theme 'everforest'
-
-# List of plugins
+#tmux plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'tmux-plugins/tmux-cpu'
+set -g @plugin 'tmux-plugins/tmux-battery'
 
-# catppuccin config 3
-set -g @catppuccin_window_left_separator " "
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
 
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
+# Other examples:
+# set -g @plugin 'github_username/plugin_name'
+# set -g @plugin 'github_username/plugin_name#branch'
+# set -g @plugin 'git@github.com:user/plugin'
+#set -g @plugin 'catppuccin/tmux#v2.1.2' # See https://github.com/catppuccin/tmux/tags for additional tags
+# ...alongside
+set -g @plugin 'catppuccin/tmux#v2.1.2'
 
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
 
-set -g @catppuccin_status_modules_right "date_time session directory user host"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator " "
-set -g @catppuccin_status_right_separator_inverse "no"
-#set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_user_icon "󰏒"
-set -g @catppuccin_status_connect_separator "no"
-set -g @catppuccin_date_time_text "%Y/%m/%d %H:%M"
 
-set -g @catppuccin_directory_text "#{pane_current_path}"
+# ~/.tmux.conf
 
-# set -g @plugin 'wfxr/tmux-power'
+# Options to make tmux more pleasant
+set -g mouse on
+set -g default-terminal "tmux-256color"
 
-#plugins install prefix <Shift i>
-#plugins uninstall prefix <Option u>
-#plugins update prefix <Shift U>
+# Configure the catppuccin plugin
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
+
+# Load catppuccin
+run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
+# For TPM, instead use `run ~/.config/tmux/plugins/tmux/catppuccin.tmux`
+
+# Make the status line pretty and add some modules
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+set -g status-right "#{E:@catppuccin_status_application}"
+set -agF status-right "#{E:@catppuccin_status_cpu}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+set -ag status-right "#{E:@catppuccin_status_uptime}"
+set -agF status-right "#{E:@catppuccin_status_battery}"
+
+run ~/.config/tmux/plugins/tmux-plugins/tmux-cpu/cpu.tmux
+run ~/.config/tmux/plugins/tmux-plugins/tmux-battery/battery.tmux
+# Or, if using TPM, just run TPM
+
+
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
-#added default setting in tmux plugins
-
-set -g status-right-length 150
-# set -g status-left-style default
-set -g status-left  "#[fg=green]Session: #S #[fg=yellow]Window #I #[fg=cyan]Pane: #P  #{prefix_highlight}"
