--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 #tmux config
 setw -g mode-keys vi
 
-#vim keybind pain change..
+#vim keybind pane change..
 
 bind h select-pane -L
 bind j select-pane -D
