Update .tmux.conf(set catppuccin)

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,63 +1,91 @@
 
-#tmux config
+#tmux conf
 setw -g mode-keys vi
 
-#vim keybind pane change..
-
+#vim keybind pane change...
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+### configure Tmux Plugin Manager
+set-environment -gF TMUX_PLUGIN_MANAGER_PATH '#{HOME}/.tmux/plugins/'
 
-set-option -g status-position top
+if 'test ! -d "${TMUX_PLUGIN_MANAGER_PATH}/tpm"' {
+  run 'mkdir -p "${TMUX_PLUGIN_MANAGER_PATH}"'
+  run 'git clone https://github.com/tmux-plugins/tpm "${TMUX_PLUGIN_MANAGER_PATH}/tpm"'
+  run '${TMUX_PLUGIN_MANAGER_PATH}/tpm/bin/install_plugins'
+}
 
-#tmux plugins
 set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'tmux-plugins/tmux-sensible'
+#
+# basic plugins
+set -g @plugin 'tmux-plugins/tmux-yank'
+#
+# theme / style
+set -g @plugin 'catppuccin/tmux'
+set -g @plugin 'joshmedeski/tmux-nerd-font-window-name'
+set -g @plugin 'alexwforsythe/tmux-which-key'  # prefix + space
 set -g @plugin 'tmux-plugins/tmux-cpu'
 set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'dreknix/tmux-primary-ip'
+#
+# tooling
+set -g @plugin 'omerxx/tmux-sessionx'          # prefix + o
 
+### configure plugins
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-#set -g @plugin 'catppuccin/tmux#v2.1.2' # See https://github.com/catppuccin/tmux/tags for additional tags
-# ...alongside
-set -g @plugin 'catppuccin/tmux#v2.1.2'
+### https://github.com/catppuccin/tmux
+set -g @catppuccin_flavor 'mocha'
+set -g @catppuccin_window_status_style 'rounded'
+set -g @catppuccin_window_number_position 'right'
+set -g @catppuccin_window_status 'no'
+set -g @catppuccin_window_default_text '#W'
+set -g @catppuccin_window_current_fill 'number'
+set -g @catppuccin_window_current_text '#W'
+set -g @catppuccin_window_current_color '#{E:@thm_surface_2}'
+set -g @catppuccin_date_time_text '%Y/%m/%d %H:%M'
+set -g @catppuccin_status_module_text_bg '#{E:@thm_mantle}'
 
+# source the plugin here
+run '#{TMUX_PLUGIN_MANAGER_PATH}/tmux/catppuccin.tmux'
 
+# load custom moudules
+source -F '#{HOME}/.tmux/plugins/custom_modules/ctp_cpu.conf'
+source -F '#{HOME}/.tmux/plugins/custom_modules/ctp_memory.conf'
+source -F '#{HOME}/.tmux/plugins/custom_modules/primary_ip.conf'
 
-# ~/.tmux.conf
-
-# Options to make tmux more pleasant
-set -g mouse on
-set -g default-terminal "tmux-256color"
-
-# Configure the catppuccin plugin
-set -g @catppuccin_flavor "mocha"
-set -g @catppuccin_window_status_style "rounded"
-
-# Load catppuccin
-run ~/.config/tmux/plugins/catppuccin/tmux/catppuccin.tmux
-# For TPM, instead use `run ~/.config/tmux/plugins/tmux/catppuccin.tmux`
-
-# Make the status line pretty and add some modules
-set -g status-right-length 100
+# set left and right status bar
+set -g allow-rename off
+set -g status-position top
+set -g status-interval 5
 set -g status-left-length 100
-set -g status-left ""
-set -g status-right "#{E:@catppuccin_status_application}"
-set -agF status-right "#{E:@catppuccin_status_cpu}"
-set -ag status-right "#{E:@catppuccin_status_session}"
-set -ag status-right "#{E:@catppuccin_status_uptime}"
-set -agF status-right "#{E:@catppuccin_status_battery}"
+set -g status-right-length 100
+set -g status-left '#{E:@catppuccin_status_session} '
+set -gF status-right '#{E:@catppuccin_status_primary_ip}'
+set -agF status-right '#{E:@catppuccin_status_ctp_cpu}'
+set -agF status-right '#{E:@catppuccin_status_ctp_memory}'
+if 'test -r /sys/class/power_supply/BAT*' {
+  set -agF status-right '#{E:@catppuccin_status_battery}'
+}
+set -ag status-right '#{E:@catppuccin_status_date_time}'
 
-run ~/.config/tmux/plugins/tmux-plugins/tmux-cpu/cpu.tmux
-run ~/.config/tmux/plugins/tmux-plugins/tmux-battery/battery.tmux
-# Or, if using TPM, just run TPM
+### general config
 
+# set ctrl-a as second prefix
+set -g prefix2 C-a
+bind C-a send-prefix -2
 
+# start index at 1
+set -g base-index 1
+set -g pane-base-index 1
 
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# renumber when window is closed
+set -g renumber-window on
+
+# enable 256-colors
+set -g default-terminal 'screen-256color'
+set -ag terminal-overrides ',xterm-256color*:RGB'
+
+# initialize tmux plugin manager and source all plugins
+run '#{TMUX_PLUGIN_MANAGER_PATH}/tpm/tpm'
